# cogito-protocol

./: .gitignore  .gitmodules  README.md
Blockchain_development/: CHANGELOG.md  HandlerContract.hs  README.md  cabal.project  gcoin_mint.hs  plutus-starter.cabal
Blockchain_development/plutus-starter-main/: plutus-starter.cabal
Blockchain_development/plutus-starter-main/src/: Handler.hs
Blockchain_development/sample minting smart contract/: mint.hs
Blockchain_development/src/: HandlerContract.hs  TestHandler.hs
Blockchain_development/src/GCOIN/: HandlerContract.hs  Mint.hs  NFT.hs  TestHandler.hs
Financial_modeling/appreciation_video/: .Rhistory  Explanation.txt  coin_appreciation.R  currencies_v2.csv
Financial_modeling/financial_model/MC_configuration/: single_return_simulate.ipynb
Financial_modeling/financial_model/MC_configuration_higher_return/: helper_whole_sim.py
Financial_modeling/financial_model_MC_setup/MC_configuration/: helper_whole_sim.py  whole_growth.ipynb
Financial_modeling/financial_model_MC_setup/MC_configuration_higher_return/: helper_whole_sim.py  simulate_growth.ipynb  (+1 more)
Financial_modeling/financial_model_interactive/: simulate_growth.ipynb
Financial_modeling/growth_modeling/: growth_model_trials.ipynb  helper_growth.py  simulate_growth.ipynb  simulate_returns.py  whole_growth.ipynb
Financial_modeling/index_simulation/: 10th_perc.jph  Indexes_analysis.ipynb  green_coin.csv  helper_index.py  lower_std.ipynb  my_rand_lib.py  rand_seed_file
Financial_modeling/sample_graph/: helper_whole_sim.py  simulate_graphs.ipynb  simulate_returns.py
MintAndBurn_frontend/: .env  config-overrides.js  package.json  run.bat
MintAndBurn_frontend/public/: index.html
MintAndBurn_frontend/src/: App.js  fonts.css  index.js
(+68 files in other folders)
